<resources>
    <string name="app_name">My First Login</string>
    <!-- Inicio de sesión -->
    <string name="login_txt_title">Inicio de sesión</string>
    <string name="login_ipt_username">Nombre de usuario</string>
    <string name="login_ipt_password">Contraseña</string>
    <string name="login_btn_submit">Ingresar</string>
    <string name="login_msg_username_empty">Ingrese su nombre de usuario.</string>
    <string name="login_msg_password_empty">Ingrese su contraseña.</string>
    <string name="login_msg_loading">Iniciando sesión...</string>
    <string name="login_dlg_offline_title">Iniciar sesión sin conexión</string>
    <string name="login_dlg_offline_msg">No se pudo conectarse a Internet. ¿Desea iniciar sesión
        sin conexión?\nDebe haber iniciado sesión anteriormente para utilizar esta opción.</string>
    <string name="login_dlg_error_title">Error al iniciar sesión</string>
    <string name="login_dlg_error_msg_not_found">No se pudo iniciar sesión. Asegúrese que haya
        escrito correctamente su nombre de usuario y contraseña.</string>
    <!-- Pantalla de bienvenida -->
    <string name="home_txt_title">Pantalla de bienvenida</string>
    <string name="home_lbl_fullname">Nombres y apellidos</string>
    <string name="home_lbl_email">Correo electrónico</string>
    <string name="home_btn_logout">Cerrar sesión</string>
    <!-- Mensajes de conexión al API REST -->
    <string name="api_dlg_error_msg_http">Ocurrió un error desconocido.\nCódigo de error:
        HTTP %d</string>
    <string name="api_dlg_error_msg_rest">El servicio otorgó un error.\nCódigo de error: %d</string>
    <string name="api_dlg_error_msg_empty">El servicio no otorgó respuesta.</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Mensajes de activity agenda-->
    <string name="agenda_txt_title">Mi Agenda</string>
    <!-- Mensajes de activity cursos-->
    <string name="curso_txt_title">Mis Cursos</string>
    <string name="curso_lbl_cursando">CURSANDO</string>
    <string name="curso_lbl_dictando">DICTANDO</string>
    <!-- Mensajes de activity cursos-->
    <string name="perfil_txt_title">Mi Perfil</string>
    <string name="perfil_lbl_estadisticas">Estadísticas</string>
    <string name="perfil_lbl_notificaciones">Recibir Notificaciones</string>
    <string name="perfil_lbl_ciclo">Elegir ciclo:</string>
    <string name="perfil_lbl_tema">Elegir tema:</string>
    <!-- Mensajes de activity cursos-->
    <string name="tomaasistencia_txt_title">Toma de Asistencia</string>
    <string name="tomaasistencia_lbl_alumno">Alumno</string>
    <string name="tomaasistencia_lbl_codigo">Código</string>
    <string name="tomaasistencia_lbl_curso">Curso</string>
    <string name="tomaasistencia_lbl_docente">Docente</string>
    <string name="tomaasistencia_lbl_clave">Clave</string>
    <string name="tomaasistencia_lbl_aceptar">Aceptar</string>
    <string name="title_activity_bar">ActivityBar</string>
    <!-- Mensajes de activity menu-->
    <string name="menu_txt_agenda">Mi Agenda</string>
    <string name="menu_txt_cursos">Mis Cursos</string>
    <string name="menu_txt_perfil">Mi perfil</string>
    <string name="menu_txt_logout">Logout</string>

    <string name="menu_txt_nombre">James Jaramillo Huamán</string>
    <string name="menu_txt_codigo">20150605</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
