<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_lyt_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.HomeActivity">

    <LinearLayout
        android:id="@+id/home_lyt_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/home_lbl_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_lbl_fullname"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/home_txt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/home_lbl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_lbl_email"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/home_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/home_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/home_btn_logout" />
    </LinearLayout>
</ScrollView>