<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tomaasistencia_lyt_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.tomaasistencia.ActivityTomaAsistencia">

    <FrameLayout
        android:id="@+id/tomaasistencia_lyt_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tomaasistencia_tlb_barra"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#33B5E5"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/perfil_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/agenda_txt_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/tomaasistencia_lyt_alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomaasistencia_lbl_alumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomaasistencia_lbl_alumno" />

        <TextView
            android:id="@+id/tomaasistencia_txt_alumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tomaasistencia_lyt_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomaasistencia_lbl_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomaasistencia_lbl_codigo" />

        <TextView
            android:id="@+id/tomaasistencia_txt_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tomaasistencia_lyt_curso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomaasistencia_lbl_curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomaasistencia_lbl_curso" />

        <TextView
            android:id="@+id/tomaasistencia_txt_curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tomaasistencia_lyt_docente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomaasistencia_lbl_docente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomaasistencia_lbl_docente" />

        <TextView
            android:id="@+id/tomaasistencia_txt_docente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tomaasistencia_lyt_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomaasistencia_lbl_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomaasistencia_lbl_clave" />

        <EditText
            android:id="@+id/tomaasistencia_ipt_alumno"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

    </LinearLayout>

    <Button
        android:id="@+id/tomaasistencia_btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_weight="0"
        android:background="#FFD400"
        android:text="@string/tomaasistencia_lbl_aceptar"
        android:textColor="#202447" />
</LinearLayout>