<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.tomaasistencia.TomaAsistenciaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tomaasistencia_lyt_docente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tomaasistencia_lbl_docente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomaasistencia_lbl_docente"
                android:width="45dp"/>

            <TextView
                android:id="@+id/tomaasistencia_txt_docente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tomaasistencia_lyt_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tomaasistencia_lbl_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomaasistencia_lbl_codigo"
                android:width="45dp"/>

            <TextView
                android:id="@+id/tomaasistencia_txt_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tomaasistencia_lyt_curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:width="45dp">

            <TextView
                android:id="@+id/tomaasistencia_lbl_curso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomaasistencia_lbl_curso"
                android:width="45dp"/>

            <TextView
                android:id="@+id/tomaasistencia_txt_curso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tomaasistencia_lyt_alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tomaasistencia_lbl_alumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomaasistencia_lbl_alumno"
                android:width="45dp"/>

            <TextView
                android:id="@+id/tomaasistencia_txt_alumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tomaasistencia_lyt_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tomaasistencia_lbl_clave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomaasistencia_lbl_clave"
                android:width="45dp"/>

            <EditText
                android:id="@+id/tomaasistencia_ipt_alumno"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tomaasistencia_lbl_codigo" />

        </LinearLayout>

        <Button
            android:id="@+id/tomaasistencia_btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#FFD400"
            android:text="@string/tomaasistencia_lbl_aceptar"
            android:textColor="#202447" />
    </LinearLayout>

</FrameLayout>