<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/agenda_lyt_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.cursos.CursosActivity">

    <FrameLayout
        android:id="@+id/cursos_lyt_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/cursos_tlb_barra"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#33B5E5"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/cursos_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/curso_txt_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/cursos_lyt_informacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cursos_lyt_informacion_alumno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_weight="1"
                android:width="120dp"
                android:background="#FFD966"
                android:text="@string/curso_lbl_dictando"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:layout_weight="1"
                android:width="120dp"
                android:background="#FFF2CC"
                android:text="@string/curso_lbl_cursando"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>