<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/perfil_lyt_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/perfil_tlb_barra"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#33B5E5"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/perfil_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/perfil_txt_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/perfil_lyt_informacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/perfil_lbl_estadistica"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/perfil_lbl_estadisticas"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/perfil_img_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars[7]" />

        <Switch
            android:id="@+id/perfil_swt_notificaciones"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:width="30dp"
            android:text="@string/perfil_lbl_notificaciones" />

        <LinearLayout
            android:id="@+id/perfil_lyt_switches"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/perfil_lbl_ciclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/perfil_lbl_ciclo" />

            <Spinner
                android:id="@+id/perfil_spn_ciclo"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:minWidth="50dp" />

            <TextView
                android:id="@+id/perfil_lbl_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/perfil_lbl_tema" />

            <Spinner
                android:id="@+id/perfil_spn_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1" />
        </LinearLayout>

        @+id/perfil_lyt_foto_nombre

    </LinearLayout>
</LinearLayout>
