<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.perfil.PerfilFragment"
    android:background="#F1E4F7">

    <LinearLayout
        android:id="@+id/perfil_lyt_informacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_person_black_24dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="James Jaramillo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    tools:text="20150605"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="2019-1" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/perfil_lbl_estadistica"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/perfil_lbl_estadisticas"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/perfil_img_graph"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_show_chart_black_24dp" />

        <Switch
            android:id="@+id/perfil_swt_notificaciones"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:width="30dp"
            android:text="@string/perfil_lbl_notificaciones" />

        <LinearLayout
            android:id="@+id/perfil_lyt_switches"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/perfil_lbl_ciclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/perfil_lbl_ciclo" />

            <Spinner
                android:id="@+id/perfil_spn_ciclo"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:minWidth="50dp"
                />

            <TextView
                android:id="@+id/perfil_lbl_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/perfil_lbl_tema" />

            <Spinner
                android:id="@+id/perfil_spn_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>